--- a/triply-frontend/index.html
+++ b/triply-frontend/index.html
@@ -28,6 +28,9 @@
 </head>
 
 <body>
+  <script>
+    window.global = window;
+  </script>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
